tests/snapshots/snapshots__budget_input_otp_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (492 words)

CHANGELOG.md
     1→# Changelog …
     3→## [1.4.2] …
README.md
     1→# The only accessible & unstyled & full featured Input OTP component in the Web. …
     3→### OTP Input for React 🔐 by [@guilhermerodz](https://twitter.com/guilherme_rodz)
    18→https://github.com/guilhermerodz/input-otp/assets/10366880/753751f5-eda8-4145-a4b9-7ef51ca5e453
    19→
    20→## Usage …
    39→## Default example …
   136→## How it works …
   141→## Features …
   198→### Auto tracks if the input has space in the right side for the badge
   200→https://github.com/guilhermerodz/input-otp/assets/10366880/bf01af88-1f82-463e-adf4-54a737a92f59
   201→
   202→</details>
   203→
   204→## API Reference …
   206→### OTPInput
   208→The root container. Define settings for the input via props. Then, use the `render` prop to create the slots.
   209→
   210→#### Props …
   293→## Examples …
   377→## Caveats …
   539→#### Sponsors …
apps/storybook/README.md
    13→## 🚅 Quick start …
    44→## 🔎 What's inside? …
    83→## Contribute …
    87→## Learning Storybook …
apps/storybook/src/lib/utils.ts
     4→export function cn(...inputs: ClassValue[]) {
     5→  return twMerge(clsx(inputs))
     6→}
apps/storybook/src/stories/Button.stories.ts
    14→export const Primary = {
    21→export const Secondary = {
    27→export const Large = {
    34→export const Small = {
apps/storybook/src/stories/Button.tsx
     5→/**
     6→ * Primary UI component for user interaction
     7→ */
     8→export const Button = ({ primary, backgroundColor, size, label, ...props }) => {
apps/storybook/src/stories/InputOTP.stories.tsx
    29→export const Default: Story = {}
apps/storybook/tailwind.config.js
     2→const config = {
apps/website/README.md
     3→## Getting Started …
    23→## Learn More …
    32→## Deploy on Vercel …
apps/website/next.config.mjs
     4→const nextProdConfig = {}
apps/website/src/app/(local-pages)/example-auto-submit/page.tsx
     9→export default function ExampleAutoSubmit() {
apps/website/src/app/(local-pages)/example-auto-submit/server/form-action.ts
     3→export async function formAction(formData: FormData) {
apps/website/src/app/(local-pages)/example-playground/code.tsx
    99→export function ExampleCode() {
apps/website/src/app/(local-pages)/example-playground/component.tsx
     8→export function ExampleComponent(
     9→  props: Partial<Omit<React.ComponentProps<typeof OTPInput>, 'children'>>,
    10→) {
apps/website/src/app/(local-pages)/example-playground/page.tsx
     3→export default function ExamplePlayground() {
apps/website/src/app/(local-pages)/layout.tsx
     7→export default function RootLayout({
     8→  children,
      →…
apps/website/src/app/(local-pages)/raw-input/page.tsx
     5→export default function ShadcnPage() {
apps/website/src/app/(local-pages)/shadcn/page.tsx
    12→export default function ShadcnPage() {
apps/website/src/app/(local-pages)/shadcn/pwmb/page.tsx
    13→export default function ShadcnPage() {
apps/website/src/app/(local-pages)/shadcn/static/page.tsx
     5→export default async function StaticPage(pageProps: any) {
apps/website/src/app/(pages)/(home)/_components/confetti.tsx
     3→export function Confetti({
apps/website/src/app/(pages)/(home)/_components/showcase.tsx
    10→const DynamicConfetti = dynamic(() =>
    14→export function Showcase({ className, ...props }: { className?: string }) {
   151→function Slot(props: {
   199→function FakeCaret() {
apps/website/src/app/(pages)/(home)/page.tsx
    19→const fadeUpClassname =
    34→export default async function IndexPage() {
   148→export const revalidate = 3600
apps/website/src/app/(pages)/layout.tsx
    14→export const metadata: Metadata = {
    68→export default function RootLayout({
    69→  children,
      →…
apps/website/src/components/icons.tsx
     1→type IconProps = React.HTMLAttributes<SVGElement>
     3→export const Icons = {
apps/website/src/components/ui/badge.tsx
    26→export interface BadgeProps
    27→  extends React.HTMLAttributes<HTMLDivElement>,
    28→    VariantProps<typeof badgeVariants> {}
apps/website/src/components/ui/button.tsx
    36→export interface ButtonProps
    37→  extends React.ButtonHTMLAttributes<HTMLButtonElement>,
    38→    VariantProps<typeof buttonVariants> {
    39→  asChild?: boolean
    40→}
apps/website/src/config/site.ts
     1→export const siteConfig = {
    13→export type SiteConfig = typeof siteConfig
apps/website/src/lib/fonts.ts
    10→export const fontSans = GeistSans
    12→export const fontMono = FontMono({
apps/website/src/lib/utils.ts
     4→export function cn(...inputs: ClassValue[]) {
     5→  return twMerge(clsx(inputs))
     6→}
packages/input-otp/src/input.tsx
    10→export const OTPInputContext = React.createContext<RenderProps>(
    14→export const OTPInput = React.forwardRef<HTMLInputElement, OTPInputProps>(
   540→function safeInsertRule(sheet: CSSStyleSheet, rule: string) {
packages/input-otp/src/regexp.ts
     1→export const REGEXP_ONLY_DIGITS …
     2→export const REGEXP_ONLY_CHARS …
     3→export const REGEXP_ONLY_DIGITS_AND_CHARS …
packages/input-otp/src/sync-timeouts.ts
     1→export function syncTimeouts(cb: (...args: any[]) => unknown): number[] {
packages/input-otp/src/types.ts
     1→export interface SlotProps {
     2→  isActive: boolean
     3→  char: string | null
      →…
     7→export interface RenderProps {
     8→  slots: SlotProps[]
     9→  isFocused: boolean
      →…
    33→export type OTPInputProps …
packages/input-otp/src/use-previous.ts
     3→export function usePrevious<T>(value: T) {
packages/input-otp/src/use-pwm-badge.tsx
    15→export function usePasswordManagerBadge({
    16→  containerRef,
    17→  inputRef,
    18→  pushPasswordManagerStrategy,
      →…
