tests/snapshots/snapshots__budget_input_otp_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 5 → level 0 (7 words)

index.ts
input.tsx
regexp.ts
sync-timeouts.ts
types.ts
use-previous.ts
use-pwm-badge.tsx
