tests/snapshots/snapshots__budget_input_otp_level1.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 60 → level 1 (58 words)

index.ts
input.tsx
    10→export const OTPInputContext
    14→export const OTPInput
   540→function safeInsertRule
   553→const NOSCRIPT_CSS_FALLBACK
regexp.ts
     1→export const REGEXP_ONLY_DIGITS
     2→export const REGEXP_ONLY_CHARS
     3→export const REGEXP_ONLY_DIGITS_AND_CHARS
sync-timeouts.ts
     1→export function syncTimeouts
types.ts
     1→export interface SlotProps
     7→export interface RenderProps
    12→type OverrideProps
    13→type OTPInputBaseProps
    32→type InputOTPRenderFn
    33→export type OTPInputProps
use-previous.ts
     3→export function usePrevious
use-pwm-badge.tsx
     4→const PWM_BADGE_MARGIN_RIGHT
     5→const PWM_BADGE_SPACE_WIDTH_PX
     6→const PWM_BADGE_SPACE_WIDTH
     8→const PASSWORD_MANAGERS_SELECTORS
    15→export function usePasswordManagerBadge
